[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rjj"
version = "0.1.0"
authors = [
    {name = "Ross Jennings", email = "rossjjennings@gmail.com"},
]
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "sympy",
    "python-dateutil",
    "requests",
]
